# jd_log

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  demo.cpp
jd_log/: BaseLoggerSpdImpl.cpp  BaseLoggerSpdImpl.h  CMakeLists.txt  IBaseLogger.h  IBaseLoggerImpl.h  LogManager.cpp  LogManager.h  nsdef.h
